--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/signature_pad@4.1.7/dist/signature_pad.umd.min.js" nonce=""></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js" nonce=""></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js" nonce=""></script>
-    <script type="text/javascript" src='/main.js' nonce=""></script>
+    <script type="text/javascript" src="/main.js" nonce=""></script>
 </head>
 
 <body>
