Start transition to addeventlistener

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         </g>
                     </svg>
                     <input class="basic_toggle_input" type="checkbox" id="switch_toggle_light"
-                        /><label class="basic_toggle_label" for="switch">Toggle</label>
+                        /><label class="basic_toggle_label" for="switch_toggle_light">Toggle</label>
 
                     <svg class="lightMode_svg invert_svg" viewBox="0 0 24 24" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
@@ -236,8 +236,7 @@
                 <option value="Hervé Coz">Hervé Coz</option>
             </select>
             <label class="input_container" id="input_container_firstName_worker">
-                <input type="text" class="input_input input_firstName" id="input_firstName_worker" required
-                    oninput="inputError(this)" onfocusout="showHideError(null, this)" onfocus="inputError(this)" />
+                <input type="text" class="input_input input_firstName" id="input_firstName_worker" required/>
                 <span class="input_title">Prénom</span>
                 <div class="help_container">
                     <svg class="input_info_svg main_color_svg main_color_svg" viewBox="0 0 24 24" fill="none"
@@ -289,7 +288,7 @@
             </label>
             <label class="input_container" id="input_container_lastName_worker">
                 <input type="text" class="input_input input_lastName" id="input_lastName_worker" required
-                    oninput="inputError(this)" onfocusout="showHideError(null, this)" onfocus="inputError(this)" />
+                     />
                 <span class="input_title">Nom</span>
                 <div class="help_container">
                     <svg class="input_info_svg main_color_svg" viewBox="0 0 24 24" fill="none"
@@ -429,7 +428,7 @@
             </label>
             <label class="input_container" id="input_container_siren_worker">
                 <input type="text" class="input_input input_siren" id="input_siren_worker" required
-                    oninput="inputError(this)" onfocusout="showHideError(null, this)" onfocus="inputError(this)" />
+                     />
                 <span class="input_title">SIREN</span>
                 <div class="help_container">
                     <svg class="input_info_svg main_color_svg" viewBox="0 0 24 24" fill="none"
@@ -624,7 +623,7 @@
             </select>
             <label class="input_container" id="input_container_name_customer">
                 <input type="text" class="input_input input_company_name" id="input_name_customer" required
-                    oninput="inputError(this)" onfocusout="showHideError(null, this)" onfocus="inputError(this)" />
+                     />
                 <span class="input_title">Nom d'entreprise</span>
                 <div class="help_container">
                     <svg class="input_info_svg main_color_svg" viewBox="0 0 24 24" fill="none"
@@ -765,7 +764,7 @@
             </label>
             <label class="input_container" id="input_container_email_customer">
                 <input type="text" class="input_input input_email" id="input_email_customer" required
-                    oninput="inputError(this)" onfocusout="showHideError(null, this)" onfocus="inputError(this)" />
+                     />
                 <span class="input_title">E-mail</span>
                 <div class="help_container">
                     <svg class="input_info_svg main_color_svg" viewBox="0 0 24 24" fill="none"
@@ -797,7 +796,7 @@
             </label>
             <label class="input_container" id="input_container_siren_customer">
                 <input type="text" class="input_input input_siren" id="input_siren_customer" required
-                    oninput="inputError(this)" onfocusout="showHideError(null, this)" onfocus="inputError(this)" />
+                     />
                 <span class="input_title">SIREN</span>
                 <div class="help_container">
                     <svg class="input_info_svg main_color_svg" viewBox="0 0 24 24" fill="none"
