Fix dragOn dragMove + finish addevelistener debug

--- a/index.html
+++ b/index.html
@@ -871,8 +871,8 @@
                 <div class="devis_line">
                     <span class="input_input textarea devis_description" role="textbox" contenteditable required
                        ></span>
-                    <input type="text" class="input_input devis_quantity" required oninput="priceCalc(this)" />
-                    <input type="text" class="input_input devis_price" required oninput="priceCalc(this)" />
+                    <input type="text" class="input_input devis_quantity devis_price_calc" required />
+                    <input type="text" class="input_input devis_price devis_price_calc" required />
                     <span class="input_input devis_price_total">0€</span>
                     <svg draggable="false" class="svg_devis_line_dots" viewBox="9 1 6 22"
                         xmlns="http://www.w3.org/2000/svg" stroke="#000000" stroke-width="0.00024000000000000003"
