Avoid 404 image get

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h1>
                     Devis generator
                 </h1>
-                <img id="main_title_img" src="/animate_writing.png" alt="Writing Hand" />
+                <img id="main_title_img" src="" alt="Writing Hand" />
             </div>
             <div class="navBar">
                 <div class="lightMode_container">
@@ -150,7 +150,7 @@
                         <p class="error_text">
                             Doit commencer par une majuscule, seul '-' est accepté comme caractère spécial.
                         </p>
-                        <img class="error_img" src="/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                        <img class="error_img" src="" alt="Angry Face" width="25" height="25" />
                     </div>
                 </label>
                 <label class="input_container" id="devis_number_container">
@@ -199,7 +199,7 @@
                         <p class="error_text">
                             Doit commencer par une majuscule, seul '-' est accepté comme caractère spécial.
                         </p>
-                        <img class="error_img" src="/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                        <img class="error_img" src="" alt="Angry Face" width="25" height="25" />
                     </div>
                 </label>
             </div>
@@ -276,7 +276,7 @@
                     <p class="error_text">
                         Doit commencer par une majuscule, seul '-' est accepté comme caractère spécial.
                     </p>
-                    <img class="error_img" src="/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="" alt="Angry Face" width="25" height="25" />
                 </div>
 
             </label>
@@ -325,7 +325,7 @@
                     <p class="error_text">
                         Doit commencer par une majuscule, seul '-' est accepté comme caractère spécial.
                     </p>
-                    <img class="error_img" src="/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
             <label class="input_container" id="input_container_phone_worker">
@@ -360,7 +360,7 @@
                     <p class="error_text">
                         Choisissez un préfixe puis saisissez les 10 chiffres du numéro.
                     </p>
-                    <img class="error_img" src="/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
             <label class="input_container" id="input_container_address_worker">
@@ -409,7 +409,7 @@
                     <p class="error_text">
                         Putain v'la l'erreur mon fréro c'est tendu !
                     </p>
-                    <img class="error_img" src="/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
             <label class="input_container" id="input_container_siren_worker">
@@ -457,7 +457,7 @@
                     <p class="error_text">
                         Le SIREN se compose de 9 chiffres.
                     </p>
-                    <img class="error_img" src="/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
             <div class="display_flex_start" id="check_container_artisan">
@@ -519,7 +519,7 @@
                     <p class="error_text">
                         Doit commencer par une majuscule, seul '-' est accepté comme caractère spécial.
                     </p>
-                    <img class="error_img" src="/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
             <label class="input_container hide_input" id="input_container_commercant_rcs_worker">
@@ -567,7 +567,7 @@
                     <p class="error_text">
                         Doit commencer par une majuscule, seul '-' est accepté comme caractère spécial.
                     </p>
-                    <img class="error_img" src="/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
         </div>
@@ -645,7 +645,7 @@
                     <p class="error_text">
                         Doit commencer par une majuscule, seul '-' est accepté comme caractère spécial.
                     </p>
-                    <img class="error_img" src="/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="" alt="Angry Face" width="25" height="25" />
                 </div>
 
             </label>
@@ -695,7 +695,7 @@
                     <p class="error_text">
                         Putain v'la l'erreur mon fréro c'est tendu !
                     </p>
-                    <img class="error_img" src="/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
             <label class="input_container" id="input_container_phone_customer">
@@ -730,7 +730,7 @@
                     <p class="error_text">
                         Choisissez un préfixe puis saisissez les 10 chiffres du numéro.
                     </p>
-                    <img class="error_img" src="/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
             <label class="input_container" id="input_container_email_customer">
@@ -759,7 +759,7 @@
                     <p class="error_text">
                         Veuillez saisir un email valide, '.', '-', '@' sont autorisés.
                     </p>
-                    <img class="error_img" src="/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
             <label class="input_container" id="input_container_siren_customer">
@@ -807,7 +807,7 @@
                     <p class="error_text">
                         Le SIREN se compose de 9 chiffres.
                     </p>
-                    <img class="error_img" src="/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
         </div>
@@ -1096,7 +1096,7 @@
                     <p class="error_text">
                         Le taux d'indemnités minimum pour le premier semestre 2024 est 15.21%
                     </p>
-                    <img class="error_img" src="/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="" alt="Angry Face" width="25" height="25" />
                 </div>
 
             </label>
@@ -1160,7 +1160,7 @@
                     <p class="error_text">
                         Doit commencer par une majuscule, seul '-' est accepté comme caractère spécial.
                     </p>
-                    <img class="error_img" src="/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="" alt="Angry Face" width="25" height="25" />
                 </div>
 
             </label>
@@ -1247,7 +1247,7 @@
                     <p class="error_text">
                         Mauvais format d'IBAN
                     </p>
-                    <img class="error_img" src="/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
             <label class="input_container">
@@ -1277,7 +1277,7 @@
                     <p class="error_text">
                         Mauvais format d'IBAN
                     </p>
-                    <img class="error_img" src="/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
         </div>
