Erase direct image link

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 
             </div>
             <div class="paralax">
-                <img id="img_paralax_1_2" src="landing_paralax_1_2.png" />
-                <img id="img_paralax_1_3" src="landing_paralax_1_3.png" />
-                <img id="img_paralax_1_1" src="landing_paralax_1_1.png" />
+                <img id="img_paralax_1_2" src="" />
+                <img id="img_paralax_1_3" src="" />
+                <img id="img_paralax_1_1" src="" />
             </div>
         </div>
 
@@ -186,7 +186,7 @@
                         devis/facture tranquillement maintenant.
                     </p>
                     <div class="landing_workflow_content_video">
-                        <img src="image_for_readme_1.png" alt="">
+                        <img src="" alt="">
                     </div>
                 </div>
                 <div class="landing_workflow_content_container" id="landing_workflow_content_container_2">
@@ -199,7 +199,7 @@
                         paypal pour centraliser les informations de paiement à votre client.
                     </p>
                     <div class="landing_workflow_content_video">
-                        <img src="image_for_readme_1.png" alt="">
+                        <img src="" alt="">
                     </div>
                 </div>
                 <div class="landing_workflow_content_container" id="landing_workflow_content_container_3">
@@ -213,7 +213,7 @@
                         lire vos informations.
                     </p>
                     <div class="landing_workflow_content_video">
-                        <img src="image_for_readme_1.png" alt="">
+                        <img src="" alt="">
                     </div>
                 </div>
             </div>
