LOADING on launch

--- a/index.html
+++ b/index.html
@@ -1580,7 +1580,7 @@
 
     </div>
 
-    <div id="loading_container" class="wraped">
+    <div id="loading_container" class="">
         <div id="loading_text">
             LOADING
         </div>
