-480px responsive for landing page

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 <body>
     <div class="banner">
         <div class="banner_container">
-            <div class="main_title">
+            <a class="main_title" href="/" route="home">
                 <h1>
                     Devis generator
                 </h1>
                 <img id="main_title_img" src="" alt="Writing Hand" />
-            </div>
+            </a>
             <div class="navBar">
                 <div class="lightMode_container">
                     <svg class="lightMode_svg invert_svg" viewBox="0 0 24 24" fill="none"
@@ -82,7 +82,7 @@
         </div>
     </div>
 
-    <div id="landing_page">
+    <div id="landing_page" class="full_page_container">
         <div class="landing_full_section" id="landing_section_presentation">
             <div class="landing_paragraph_container">
                 <h1>
@@ -220,7 +220,7 @@
         </div>
     </div>
 
-    <div id="content_container">
+    <div id="content_container" class="full_page_container">
         <div class="section full_section" id="section_setTitle">
             <h2 class="section_title">
                 <svg class="section_title_icon main_color_svg main_color_svg" viewBox="0 0 24 24" fill="none"
@@ -1582,7 +1582,7 @@
 
     <div id="loading_container" class="">
         <div id="loading_text">
-            LOADING
+            CHARGEMENT
         </div>
     </div>
 
