--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         <p class="error_text">
                             Doit commencer par une majuscule, seul '-' est accepté comme caractère spécial.
                         </p>
-                        <img class="error_img" src="/src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                        <img class="error_img" src="src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
                     </div>
                 </label>
                 <label class="input_container" id="devis_number_container">
@@ -336,7 +336,7 @@
                         <p class="error_text">
                             Doit commencer par une majuscule, seul '-' est accepté comme caractère spécial.
                         </p>
-                        <img class="error_img" src="/src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                        <img class="error_img" src="src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
                     </div>
                 </label>
             </div>
@@ -413,7 +413,7 @@
                     <p class="error_text">
                         Doit commencer par une majuscule, seul '-' est accepté comme caractère spécial.
                     </p>
-                    <img class="error_img" src="/src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
                 </div>
 
             </label>
@@ -462,7 +462,7 @@
                     <p class="error_text">
                         Doit commencer par une majuscule, seul '-' est accepté comme caractère spécial.
                     </p>
-                    <img class="error_img" src="/src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
             <label class="input_container" id="input_container_phone_worker">
@@ -496,7 +496,7 @@
                     <p class="error_text">
                         Choisissez un préfixe puis saisissez les 10 chiffres du numéro.
                     </p>
-                    <img class="error_img" src="/src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
             <label class="input_container" id="input_container_address_worker">
@@ -545,7 +545,7 @@
                     <p class="error_text">
                         Putain v'la l'erreur mon fréro c'est tendu !
                     </p>
-                    <img class="error_img" src="/src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
             <label class="input_container" id="input_container_siren_worker">
@@ -593,7 +593,7 @@
                     <p class="error_text">
                         Le SIREN se compose de 9 chiffres.
                     </p>
-                    <img class="error_img" src="/src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
             <div class="display_flex_start" id="check_container_artisan">
@@ -655,7 +655,7 @@
                     <p class="error_text">
                         Doit commencer par une majuscule, seul '-' est accepté comme caractère spécial.
                     </p>
-                    <img class="error_img" src="/src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
             <label class="input_container hide_input" id="input_container_commercant_rcs_worker">
@@ -703,7 +703,7 @@
                     <p class="error_text">
                         Doit commencer par une majuscule, seul '-' est accepté comme caractère spécial.
                     </p>
-                    <img class="error_img" src="/src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
         </div>
@@ -781,7 +781,7 @@
                     <p class="error_text">
                         Doit commencer par une majuscule, seul '-' est accepté comme caractère spécial.
                     </p>
-                    <img class="error_img" src="/src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
                 </div>
 
             </label>
@@ -831,7 +831,7 @@
                     <p class="error_text">
                         Putain v'la l'erreur mon fréro c'est tendu !
                     </p>
-                    <img class="error_img" src="/src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
             <label class="input_container" id="input_container_phone_customer">
@@ -865,7 +865,7 @@
                     <p class="error_text">
                         Choisissez un préfixe puis saisissez les 10 chiffres du numéro.
                     </p>
-                    <img class="error_img" src="/src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
             <label class="input_container" id="input_container_email_customer">
@@ -894,7 +894,7 @@
                     <p class="error_text">
                         Veuillez saisir un email valide, '.', '-', '@' sont autorisés.
                     </p>
-                    <img class="error_img" src="/src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
             <label class="input_container" id="input_container_siren_customer">
@@ -942,7 +942,7 @@
                     <p class="error_text">
                         Le SIREN se compose de 9 chiffres.
                     </p>
-                    <img class="error_img" src="/src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
         </div>
@@ -1228,7 +1228,7 @@
                     <p class="error_text">
                         Le taux d'indemnités minimum pour le premier semestre 2024 est 15.21%
                     </p>
-                    <img class="error_img" src="/src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
                 </div>
 
             </label>
@@ -1292,7 +1292,7 @@
                     <p class="error_text">
                         Doit commencer par une majuscule, seul '-' est accepté comme caractère spécial.
                     </p>
-                    <img class="error_img" src="/src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
                 </div>
 
             </label>
@@ -1379,7 +1379,7 @@
                     <p class="error_text">
                         Mauvais format d'IBAN
                     </p>
-                    <img class="error_img" src="/src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
             <label class="input_container">
@@ -1408,7 +1408,7 @@
                     <p class="error_text">
                         Mauvais format d'IBAN
                     </p>
-                    <img class="error_img" src="/src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
+                    <img class="error_img" src="src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
         </div>
