--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <meta name="robots" content="noindex">
     <title>Devis generator</title>
+    <meta name="robots" content="index, follow">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <meta name="description" content="Générateur de devis/facture pour micro-entrepreneur. Gratuit et open-source.">
+    <meta name="description" content="Générateur de devis/facture pour les micro-entrepreneurs français. Gratuit et open-source.">
+    <meta name="keywords" content="devis, facture, auto-entrepreneur, autoentrepreneur, micro-entrepreneur, entrepreneur, générer, éditer" />
     <link rel="icon"
         href="src/image/favicon.png" />
     <link rel='stylesheet' type='text/css' media='screen' href='/style.css'>
