Add register feature

--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
                                     <div id="button_register" class="button_basic button_basic_invert">
                                         <div>Créer un compte</div>
                                     </div>
+                                    <div id="display_pseudo">Mon pseudo</div>
+                                    <div id="button_unsign" class="button_basic button_basic_invert">
+                                        <div>Déconnexion</div>
+                                    </div>
                             </div>
                             
                         </div>
