Test templates saves

--- a/index.html
+++ b/index.html
@@ -746,6 +746,9 @@
                     <img class="error_img" src="src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
+            <div id="button_save_worker" class="button_basic">
+                <div>Sauvegarder</div>
+            </div>
         </div>
 
         <div class="section mid_section" id="section_customer">
@@ -985,6 +988,9 @@
                     <img class="error_img" src="src/image/animate_angry.png" alt="Angry Face" width="25" height="25" />
                 </div>
             </label>
+            <div id="button_save_customer" class="button_basic">
+                <div>Sauvegarder</div>
+            </div>
         </div>
 
         <div class="section full_section" id="section_devis">
