Add fetch templateSave

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                     </g>
                 </svg>Prestataire
             </h2>
-            <select class="section_select_template" name="template_partner_name" id="template_partner">
+            <select class="section_select_template" name="template_partner_name" id="template_worker">
                 <option value="">Templates</option>
                 <option value="Alexandre RONGIER">Alexandre RONGIER</option>
                 <option value="Hervé Coz">Hervé Coz</option>
@@ -775,7 +775,7 @@
                 Client
             </h2>
             <select class="section_select_template" name="template_partner_name" id="template_customer">
-                <option value="">Templates</option>
+                <option value="">Template vide</option>
                 <option value="Client 1">Client 1</option>
                 <option value="Client 2">Client 2</option>
             </select>
