Delete bad words...

--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                                         fill="#0F0F0F"></path>
                                 </g>
                             </svg>
-                            <div class="speech">Votre prénom, faites un effort s'il vous plaît...</div>
+                            <div class="speech">Votre prénom</div>
                         </div>
                         <div class="obligatory_container">
                             <svg class="input_info_svg main_color_svg main_color_svg" viewBox="0 0 24 24" fill="none"
@@ -600,7 +600,7 @@
                                         fill="#0F0F0F"></path>
                                 </g>
                             </svg>
-                            <div class="speech">Votre nom de famille, faites un effort s'il vous plaît...</div>
+                            <div class="speech">Votre nom de famille</div>
                         </div>
                         <div class="obligatory_container">
                             <svg class="input_info_svg main_color_svg main_color_svg" viewBox="0 0 24 24" fill="none"
