--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <!-- Open Graph Meta Elements for Social Cards -->
+    <meta property="og:site_name" content="Devis Generator" />
+    <meta property="og:title" content="Devis Generator" />
+    <meta property="og:description" content="Un générateur de facture/devis pour les micros-entrepreneurs français. Moderne, responsive, et respectueux des lois." />
+    <meta property="og:image" content="src/image/open_graph.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://devisgenerator.fr" />
+    <!-- Meta Elements for Twitter Social Card -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Devis Generator" />
+    <meta property="twitter:description" content="Un générateur de facture/devis pour les micros-entrepreneurs français. Moderne, responsive, et respectueux des lois." />
+    <meta property="twitter:image" content="src/image/open_graph.png" />
+    <meta property="twitter:url" content="https://devisgenerator.fr" />
+
     <title>Devis generator</title>
     <meta name="robots" content="index, follow">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
