Bye junior status + no refresh actual page button

--- a/index.html
+++ b/index.html
@@ -2337,7 +2337,7 @@
                             </a>
                         </div>
                         <p>
-                            Développeur full-stack junior
+                            Développeur full-stack
                         </p>
                         <p>
                             Je cherche un travail !
