Change job announce text

--- a/index.html
+++ b/index.html
@@ -1917,6 +1917,7 @@
                     </div>
                 </div>
                 <a href="https://github.com/tainalo2/devis_generator/issues/new?assignees=&labels=enhancement&projects=&template=demande-d-ajout-de-fonctionalit%C3%A9.md&title=%5BFEATURE%5D"
+                    target="_blank"
                     class="full_section display_flex_center" id="button_pdf_generation">
                     <div class="button_basic">
                         <svg class="button_svg invert_svg" viewBox="0 0 24 24" fill="none"
@@ -2340,7 +2341,7 @@
                             Développeur full-stack
                         </p>
                         <p>
-                            Je cherche un travail !
+                            Disponibilité immédiate CDI/CDD/Freelance
                         </p>
                     </div>
                 </div>
